updated customer feedback response

--- a/templates/check.html
+++ b/templates/check.html
@@ -100,7 +100,7 @@
             </form>
         <div id="myChart" style="float:left;"></div>
         <br>
-        <div id = 'openai-insights' style = 'color:white'>
+        <div id = 'openai-insights' style = 'color:#F0DC93'>
           
         </div>
         <div id="myChart2" style="float:left;"></div>
